# backend/core-api/swagger_server/models/patient.py
@@ -1,0 +1,117 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.study import Study  # noqa: E501
+from swagger_server import util
+
+
+class Patient(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, id: str=None, name: str=None, studies: List[Study]=None):  # noqa: E501
+        """Patient - a model defined in Swagger
+
+        :param id: The id of this Patient.  # noqa: E501
+        :type id: str
+        :param name: The name of this Patient.  # noqa: E501
+        :type name: str
+        :param studies: The studies of this Patient.  # noqa: E501
+        :type studies: List[Study]
+        """
+        self.swagger_types = {
+            'id': str,
+            'name': str,
+            'studies': List[Study]
+        }
+
+        self.attribute_map = {
+            'id': 'id',
+            'name': 'name',
+            'studies': 'studies'
+        }
+
+        self._id = id
+        self._name = name
+        self._studies = studies
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Patient':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Patient of this Patient.  # noqa: E501
+        :rtype: Patient
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def id(self) -> str:
+        """Gets the id of this Patient.
+
+
+        :return: The id of this Patient.
+        :rtype: str
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id: str):
+        """Sets the id of this Patient.
+
+
+        :param id: The id of this Patient.
+        :type id: str
+        """
+
+        self._id = id
+
+    @property
+    def name(self) -> str:
+        """Gets the name of this Patient.
+
+
+        :return: The name of this Patient.
+        :rtype: str
+        """
+        return self._name
+
+    @name.setter
+    def name(self, name: str):
+        """Sets the name of this Patient.
+
+
+        :param name: The name of this Patient.
+        :type name: str
+        """
+
+        self._name = name
+
+    @property
+    def studies(self) -> List[Study]:
+        """Gets the studies of this Patient.
+
+
+        :return: The studies of this Patient.
+        :rtype: List[Study]
+        """
+        return self._studies
+
+    @studies.setter
+    def studies(self, studies: List[Study]):
+        """Sets the studies of this Patient.
+
+
+        :param studies: The studies of this Patient.
+        :type studies: List[Study]
+        """
+
+        self._studies = studies
