# backend/core-api/swagger_server/models/study.py
@@ -1,0 +1,90 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class Study(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, id: str=None, study_date: datetime=None):  # noqa: E501
+        """Study - a model defined in Swagger
+
+        :param id: The id of this Study.  # noqa: E501
+        :type id: str
+        :param study_date: The study_date of this Study.  # noqa: E501
+        :type study_date: datetime
+        """
+        self.swagger_types = {
+            'id': str,
+            'study_date': datetime
+        }
+
+        self.attribute_map = {
+            'id': 'id',
+            'study_date': 'studyDate'
+        }
+
+        self._id = id
+        self._study_date = study_date
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Study':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Study of this Study.  # noqa: E501
+        :rtype: Study
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def id(self) -> str:
+        """Gets the id of this Study.
+
+
+        :return: The id of this Study.
+        :rtype: str
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id: str):
+        """Sets the id of this Study.
+
+
+        :param id: The id of this Study.
+        :type id: str
+        """
+
+        self._id = id
+
+    @property
+    def study_date(self) -> datetime:
+        """Gets the study_date of this Study.
+
+
+        :return: The study_date of this Study.
+        :rtype: datetime
+        """
+        return self._study_date
+
+    @study_date.setter
+    def study_date(self, study_date: datetime):
+        """Sets the study_date of this Study.
+
+
+        :param study_date: The study_date of this Study.
+        :type study_date: datetime
+        """
+
+        self._study_date = study_date
